# zmanim-core

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  test.yml
example/rust/: Cargo.toml  README.md
example/rust/src/: main.rs
examples/: daf_example.rs
go/: README.md  go.mod  main.go  zmanim_core.go
go/zmanim_core/: zmanim_core.h
hi/: go.mod  go.sum  main.go
js/: README.md  package.json
js/src/: index.ts
js/zmanim-core-bindings/: .yarnrc.yml  CONTRIBUTING.md  LICENSE  README.md  ZmanimCoreBindings.podspec  package.json  tsconfig.json
js/zmanim-core-bindings/.github/ISSUE_TEMPLATE/: config.yml
js/zmanim-core-bindings/android/: build.gradle  gradle.properties
js/zmanim-core-bindings/android/src/main/java/com/zmanimcorebindings/: ZmanimCoreBindingsModule.kt  ZmanimCoreBindingsPackage.kt
js/zmanim-core-bindings/example/: app.json  package.json
js/zmanim-core-bindings/example/android/: settings.gradle
js/zmanim-core-bindings/example/android/app/: build.gradle
js/zmanim-core-bindings/example/android/app/src/main/java/com/zmanimcorebindings.example/: MainActivity.kt  MainApplication.kt
js/zmanim-core-bindings/example/android/app/src/main/res/values/: strings.xml
js/zmanim-core-bindings/example/ios/: Podfile
js/zmanim-core-bindings/example/ios/ZmanimCoreBindingsExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
js/zmanim-core-bindings/example/ios/ZmanimCoreBindingsExample.xcodeproj/: project.pbxproj
js/zmanim-core-bindings/example/ios/ZmanimCoreBindingsExample.xcodeproj/xcshareddata/xcschemes/: ZmanimCoreBindingsExample.xcscheme
js/zmanim-core-bindings/example/src/: App.tsx
js/zmanim-core-bindings/ios/: ZmanimCoreBindings.h  ZmanimCoreBindings.mm
js/zmanim-core-bindings/src/: NativeZmanimCoreBindings.ts  index.tsx
src/: astronomical_calendar.rs  complex_zmanim_calendar.rs  lib.rs  zmanim_calendar.rs
src/hebrew_calendar/: daf.rs  jewish_calendar.rs  jewish_date.rs  mod.rs  parsha.rs  yomi_calculator.rs
src/utils/: geolocation.rs  mod.rs  noaa_calculator.rs
tests/: complex_zmanim_calendar_tests.rs  jewish_calendar_tests.rs  jewish_date_tests.rs  mod.rs  test_utils.rs
tests/java/: astronomical_calendar.rs  calendar.rs  complex_zmanim_calendar.rs  daf.rs  date.rs  geolocation.rs  jewish_calendar.rs  jewish_date.rs  mod.rs  noaa_calculator.rs  solar_event.rs  timezone.rs  zmanim_calendar.rs
tests/utils/: astronomical_calendar_test.rs  complex_zmanim_calendar_tests.rs  daf_tests.rs  geolocation_tests.rs  jewish_calendar_tests.rs  jewish_date_tests.rs  mod.rs  noaa_calculator_tests.rs  zmanim_calendar_tests.rs
zmanim-card/: Cargo.toml
zmanim-card/.cargo/: config.toml
zmanim-card/gps/: sketch.ino
zmanim-card/src/: display.rs  gps.rs  gps_data.rs  lib.rs  main.rs  storage.rs
zmanim-card/src/ard/: Adafruit_GPS.cpp  Adafruit_GPS.h  buffered_uart.rs  gps.rs  gps_lib.rs  gps_types.rs  mod.rs  nmea_integration.rs  pmkt.rs  uart_gps.rs
zmanim-card/tests/: integration.rs
zmanim-card10/: Cargo.toml
zmanim-card10/src/: display.rs  gps.rs  gps_data.rs  lib.rs  storage.rs
zmanim-card2/: Cargo.toml
zmanim-card2/src/: gps.rs  gps_data.rs  lib.rs
zmanim-card7/: Cargo.toml
zmanim-card7/.cargo/: config.toml
zmanim-card7/src/: main.rs
zmanim_card/: Cargo.toml
zmanim_core/: zmanim_core.go
