[package]
edition = "2021"
name = "zmanim-core"
version = "0.1.0"


[dependencies]
libm = "0.2.15"
heapless = "0.8.0"
icu_calendar = { version = "2.0.3", default-features = false }
chrono = { version = "0.4.41", default-features = false }
safer-ffi = { version = "0.1.13", default-features = false }


[dev-dependencies]
j4rs = "0.22.0"
rand = "0.9.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[lib]
crate-type = [
    # "staticlib", 
    "cdylib",
    "lib",
]

[[bin]]
name = "generate-headers"
required-features = ["ffi"] # Do not build unless generating headers.

[features]
# For regular use within Rust
default = []
# For building a shared library
ffi = []
# For generating headers for the shared library
headers = ["safer-ffi/headers", "ffi"]
