[package]
edition = "2021"
name = "zmanim-core"
version = "0.1.0"
description = "A high-performance, `no_std` Rust library for calculating Jewish religious times (zmanim) and astronomical events."
license-file = "./LICENCE"
repository = "https://github.com/dickermoshe/zmanim-core"


[dependencies]
libm = "0.2.15"
heapless = "0.8.0"
icu_calendar = { version = "2.0.3", default-features = false }
chrono = { version = "0.4.41", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }

[dev-dependencies]
j4rs = "0.22.0"
rand = "0.9.2"
serde_json = "1.0"


[lib]
crate-type = ["cdylib", "lib"]


[profile.release]
strip = true
lto = true
