[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "python"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[tool.maturin]
python-source = "bindings"
module-name = "zmanim_py"
profile = "release"
bindings = "uniffi"
strip = true
features = ["uniffi"]

[tool.uv.workspace]
members = ["bindings/zmanim_py"]
