[package]
# TODO(1) fix `authors` and `name` if you didn't use `cargo-generate`
authors = ["Moshe Dicker <dickermoshe@gmail.com>"]
name = "zmanim-card"

# Ferocene only supports up to 2021 edition
#edition = "2021"
# Many embedded developers don't use Ferocene, so they could benefit from the latest Rust features 
edition = "2024"
version = "0.1.0"


# To run all the tests via `cargo test` the tests need to be explicitly disabled for the binary targets
# If you use a standard main.rs file the following is sufficient:
# [[bin]]
# name = "zmanim-card"
# test = false

[[bin]]
name = "a"
path = "src/bin/a.rs"
test = false


[[bin]]
name = "hello"
path = "src/bin/hello.rs"
test = false


[lib]
harness = false

# needed for each integration test
[[test]]
name = "integration"
harness = false

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "1.0"
defmt-rtt = "1.0"
panic-probe = { version = "1.0", features = ["print-defmt"] }
cortex-m-semihosting = "0.5.0"
zmanim-core = { path = "../" }
feather_m4 = { version = "0.17.2", features = ["usb", "dma", "async"] }
usbd-serial = "0.2.2"
usb-device = "0.3.2"
cty = "0.2"
nb = "1.1.0"
nmea = { version = "0.7.0", default-features = false }
heapless = "0.8.0"
libm = "0.2.8"
chrono = { version = "0.4.41", default-features = false }
embassy-executor = { version = "0.8.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
] }
embassy-time = { version = "0.4.0" }
embedded-hal-async = "1.0.0"
embedded-io-async = "0.6.1"


[dev-dependencies]
defmt-test = "0.3"

[build-dependencies]
bindgen = "0.70"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 'z'         # <-
overflow-checks = true  # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-
