[package]
edition = "2021"
name = "zmanim-card"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7"
embedded-hal = { version = "1.0.0" }
adafruit-kb2040 = { version = "0.8.0", default-features = false }
defmt = "1.0.1"
defmt-rtt = "1.0.0"

panic-probe = { version = "1", features = ["print-defmt"] }
embassy-executor = { version = "0.8.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
] }
embassy-rp = { version = "0.7.0", features = [
    "defmt",
    "time-driver",
    "critical-section-impl",
    "rp2040",
] }
embassy-time = { version = "0.4.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-usb-logger = "0.5.0"
embassy-usb = "0.5.0"
log = "0.4.27"
static_cell = "2.1.1"
portable-atomic = { version = "1.11.1", features = ["critical-section"] }
chrono = { version = "0.4.41", default-features = false }
libm = "0.2.15"
heapless = "0.8.0"
nmea = { version = "0.7.0", default-features = false, features = [
    "all-sentences",
] }
embedded-io-async = "0.6.1"
embassy-sync = "0.7.0"
chrono-tz = { version = "0.10.4", default-features = false }
zmanim-core = { version = "0.1.0", path = "../" }


# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
