[package]
edition = "2024"
name = "zmanim-card10"
rust-version = "1.88.0"
version = "0.1.0"

[[bin]]
name = "zmanim-card10"
path = "./src/bin/main.rs"

[dependencies]
esp-alloc = { version = "0.8.0", features = ["defmt"] }

defmt = "1.0.1"
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32c6"] }
esp-hal = { version = "=1.0.0-rc.0", features = [
  "defmt",
  "esp32c6",
  "unstable",
] }

critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = [
  "defmt",
  "task-arena-size-65536",
] }
embassy-time = { version = "0.4.0", features = ["defmt"] }
esp-backtrace = { version = "0.17.0", features = [
  "defmt",
  "esp32c6",
  "exception-handler",
  "panic-handler",
] }
esp-hal-embassy = { version = "0.9.0", features = ["defmt", "esp32c6"] }
esp-println = { version = "0.15.0", features = ["defmt-espflash", "esp32c6"] }
static_cell = "2.1.1"
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }

chrono = { version = "0.4.41", default-features = false }
chrono-tz = { version = "0.10.4", default-features = false }
zmanim-core = { version = "0.1.0", path = "../" }
# nmea = { version = "0.7.0", default-features = false, features = ["RMC"] }
nmea = { version = "0.7.0", features = [
  "all-sentences",
], default-features = false }
embassy-sync = "0.7.1"
esp-storage = { version = "0.7.0", features = ["esp32c6"] }
embedded-storage = "0.3.1"
postcard = { version = "1.1.3", features = ["alloc"] }
serde = { version = "1.0.219", default-features = false }

embedded-hal-bus = { version = "0.3.0", features = ["defmt-03", "async"] }
display-interface-spi = "0.5.0"
embedded-graphics = "0.8.1"
profont = "0.7.0"
futures-lite = { version = "2.6.1", features = [
  "race",
], default-features = false }
futures = { version = "0.3.31", default-features = false, features = [
  "async-await",
] }
epd-waveshare = "0.6.0"
embedded-hal = "1.0.0"


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.dev.package.esp-storage]
opt-level = 3

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
