[package]
edition = "2021"
name = "zmanim-card2"
rust-version = "1.86"
version = "0.1.0"

[[bin]]
name = "zmanim-card2"
path = "./src/bin/main.rs"

[dependencies]
defmt = "1.0.1"
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32c6"] }
esp-hal = { version = "=1.0.0-rc.0", features = [
  "defmt",
  "esp32c6",
  "unstable",
] }

critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = [
  "defmt",
  "task-arena-size-20480",
] }
embassy-time = { version = "0.4.0", features = ["defmt"] }
esp-hal-embassy = { version = "0.9.0", features = ["defmt", "esp32c6"] }
panic-rtt-target = { version = "0.2.0", features = ["defmt"] }
rtt-target = { version = "0.6.1", features = ["defmt"] }
static_cell = "2.1.1"
chrono = { version = "0.4.41", default-features = false }
chrono-tz = { version = "0.10.4", default-features = false }
zmanim-core = { version = "0.1.0", path = "../" }
nmea = { version = "0.7.0", default-features = false, features = ["RMC"] }
embassy-sync = "0.7.1"
embedded-io-async = "0.6.1"
heapless = "0.8.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
